# lightmap-baking

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  csm.cpp  csm.h  main.cpp  skybox.cpp  skybox.h
src/shader/: dialate_fs.glsl  dilate_fs.glsl  empty_fs.glsl  fullscreen_triangle_vs.glsl  lightmap_fs.glsl  lightmap_vs.glsl  mesh_fs.glsl  mesh_vs.glsl  shadow_map_vs.glsl  skybox_fs.glsl  skybox_vs.glsl  visualize_lightmap_fs.glsl  visualize_submeshes_fs.glsl
